<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/views_gap"
    android:paddingRight="@dimen/views_gap"
    android:paddingTop="@dimen/views_gap"
    android:paddingBottom="@dimen/views_gap"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_gap"
        android:text="@string/quantity_textveiw"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="@dimen/minimum_button_size"
            android:layout_height="@dimen/minimum_button_size"
            android:textSize="@dimen/text_size"
            android:text="@string/decrement_button"
            android:onClick="decrement"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/views_half_gap"
            android:layout_marginRight="@dimen/views_half_gap"
            android:text="@string/quantity_count_textview"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size" />

        <Button
            android:layout_width="@dimen/minimum_button_size"
            android:layout_height="@dimen/minimum_button_size"
            android:textSize="@dimen/text_size"
            android:text="@string/increment_button"
            android:onClick="increment"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/views_gap"
        android:text="@string/price_textview"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_gap"
        android:layout_marginTop="@dimen/views_gap"
        android:text="@string/price_value_textview"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/order_button"
        android:onClick="submitOrder"/>

</android.widget.LinearLayout>
